--- a/hbd.html
+++ b/hbd.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
       <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130570399-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-130570399-1');
+        </script>
           <title>Chuhan Wu - Interactive Art Portfolio</title>
           <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
           <meta name="description" content="Template by Dry Themes" />
@@ -74,10 +83,10 @@
                                 <a href="#">RESUME</a>
                                 <ul class="sub-menu">
                                     <li>
-                                        <a href="images/resume-IxM-final.pdf">Design</a>
+                                        <a href="images/resume-IxM.pdf">Design</a>
                                     </li>
                                     <li>
-                                        <a href="images/resume-Journalism-final.pdf">Media & Journalism</a>
+                                        <a href="images/resume-Journalism.pdf">Media & Journalism</a>
                                     </li>
 
                                 </ul>
@@ -97,15 +106,19 @@
             <div id="content" class="site-content content-1330 center-relative">
 
               <div class="page-desc">
-                <strong>Human Evalution System</strong><br>
-                When enters the 26th century, human society is centrally controlled by one political power which completely materialized human beings in the name of promoting social development. Throughout the processes of labeling individual citizen with barcode and evaluating the organs, central government tightly servile people’s daily behavior and their body condition.<br>
 
-                <a href="https://github.com/chuhan-wu/humanEvalutionSystem">[View my code on Github]</a>
+                <h1><strong>Human Evalution System</strong></h1>
+               <h6>Medium: Processing (Java), Open CV</h6>
+               <div class="three_fourth description" style="float:right;">
+                -	Human Evaluation System is designed for government of dystopian world, where human society is centrally controlled by one political power which completely materialized human beings in the name of promoting social development. HE System contains two parts: camera detector capturing human faces and labeling bar code for each individual (Open CV), and a user interface evaluates each organ’s quality of the person who has been detected.
+
+
+                <p> <a href="https://github.com/chuhan-wu/humanEvalutionSystem"> <strong>[View my code on Github]</strong>
+                  </a></p>
+
               </div>
               <div class="clear"></div>
-              <p>&nbsp;</p>
         
-
 
                 <article>
                     <div class="content-1330 center-relative clear">
@@ -117,37 +130,30 @@
                                 <div class="clear"></div>
 
 
-                                <!-- <div class="one_half text-right portfolio-item-info">
-                                    <strong>Project Name:</strong>&nbsp;Handmade<br>
-                                    <strong>Client:</strong> Est Lorem<br>
-                                    <strong>Year:</strong> 2015<p></p>
-                                    <p>&nbsp;</p>
-                                    <p>&nbsp;</p>
 
-                                </div> -->
                                 <div class="one_half">
                                     <strong>Background: </strong><br>
                                     <p>
-The HOE System is designed by engineers of the central government for cultivating talents by buying high-quality organs from citizens. With accurate calculation from HOE System, government builds outstanding army to reinforce their power and put down insurrections, and scientist groups to maintain high-speed technological development. The HOE System contains a camera detector and a user interface. Every single citizen is under the surveillance of Cameras that are located all over the city. When the camera detects human faces, it will automatically scan their barcodes and open up the HOE transaction system with their personal information.                   </p>
+The HE System is designed by engineers of the central government for cultivating talents by buying high-quality organs from citizens. With accurate calculation from HE System, government builds outstanding army to reinforce their power and put down insurrections, and scientist groups to maintain high-speed technological development. The HE System contains a camera detector and a user interface. Every single citizen is under the surveillance of Cameras that are located all over the city. When the camera detects human faces,                   </p>
                                 </div>
 
                                 <div class="one_half last">
                                     <p>&nbsp;</p>
-                                    <p>
- In the transaction system, a 3D human model with the inside merchantable organs of the scanned person will display on the screen. People of central government may check each organ’s quality(usage out of 100%), condition(years of being used), and price(accurate market price) by simply clicking on the 3D model. The HOE System will also categorize each organ into three levels and show on the screen for government to make a selection on buying.
+                                    <p>it will automatically scan their barcodes and open up the HE transaction system with their personal information.
+ In the transaction system, a 3D human model with the inside merchantable organs of the scanned person will display on the screen. People of central government may check each organ’s quality(usage out of 100%), condition(years of being used), and price(accurate market price) by simply clicking on the 3D model. The HE System will also categorize each organ into three levels and show on the screen for government to make a selection on buying.
 </p>
                                 </div>
 
                                 <div class="one_half">
                                   <strong>Description:</strong><br>
                                     <p>
-The HOE System combines openCV and UI design together to demonstrate a Utopia of the future world. I challenge the belief of human is superior to other species and have individual spirit. In the future world, human society may enter the period with centralized political power and expropriation of citizen’s freedom. Human is totally materialized instead of considered as superior species in the world. Their behavior will be servile and valued by price. By capturing human faces with a live camera that designed in science fiction, which includes diagrams, map, and data information, people who are scanned by the system will be placed in a simulated future environment. According to Grayson Cooke, the author of LIVENESS AND THE MACHINE - Improvisation in Live Audio-Visual Performance, a live performance has the great connection with its surrounding environment and artificial arrangement (Cooke 13).
+The HE System combines openCV and UI design together to demonstrate a Utopia of the future world. I challenge the belief of human is superior to other species and have individual spirit. In the future world, human society may enter the period with centralized political power and expropriation of citizen’s freedom. Human is totally materialized instead of considered as superior species in the world. Their behavior will be servile and valued by price. By capturing human faces with a live camera that designed in science fiction, which includes diagrams, map, and data information, people who are scanned by the system will be placed in a simulated future environment. According to Grayson Cooke, the author of LIVENESS AND THE MACHINE
                                     </p>
                                 </div>
 
                                 <div class="one_half last">
                                     <p>&nbsp;</p>
-                                    <p>
+                                    <p>- Improvisation in Live Audio-Visual Performance, a live performance has the great connection with its surrounding environment and artificial arrangement (Cooke 13).
  Therefore, a well-designed environment is influential and can arouse users’ emotion by interacting with the system. Also, combining the openCV with a simulated future environment is another challenge. I was inspired by the Black Mirror and decided to expand on human detection system that was demonstrated by Professor Amy Alexander in 145A lecture. In Amy’s example, the camera will capture the human face and display a mark on it. I tried to add science fiction figures and data to the OpenCV and create the different barcode for each person.                    </p>
                                 </div>
 
@@ -162,16 +168,16 @@ Audio-Visual Performance" by Grayson Cooke, works.bepress.com/grayson_cooke/20/.
                                     </p>
                                 </div>
 
-                                
-                                <div class="clear"></div>
 
-                                <div class="one center-text" >
+                                <div class="clear"></div>
+                                <div class="one_half" >
                                   <img src="demo-images/hes1.png" alt=""><br>
                                 </div>
 
-                                <div class="one center-text">
-                                    <img src="demo-images/hes3.png" alt=""><br>
+                                <div class="one_half last">
+                                    <img src="demo-images/hes2.png" alt=""><br>
                                 </div>
+
                                 <div class="clear"></div>
                                 <p>&nbsp;</p>
                                 <p>&nbsp;</p>
