--- a/hbd.html
+++ b/hbd.html
@@ -110,7 +110,7 @@
                 <h1><strong>Human Evalution System</strong></h1>
                <h6>Medium: Processing (Java), Open CV</h6>
                <div class="three_fourth description" style="float:right;">
-                -	Human Evaluation System is designed for government of dystopian world, where human society is centrally controlled by one political power which completely materialized human beings in the name of promoting social development. HE System contains two parts: camera detector capturing human faces and labeling bar code for each individual (Open CV), and a user interface evaluates each organ’s quality of the person who has been detected.
+                Human Evaluation System is designed for government of dystopian world, where human society is centrally controlled by one political power which completely materialized human beings in the name of promoting social development. HE System contains two parts: camera detector capturing human faces and labeling bar code for each individual (Open CV), and a user interface evaluates each organ’s quality of the person who has been detected.
 
 
                 <p> <a href="https://github.com/chuhan-wu/humanEvalutionSystem"> <strong>[View my code on Github]</strong>
