--- a/ln.html
+++ b/ln.html
@@ -113,8 +113,8 @@
                <div class="three_fourth description" style="float:right;">
               Each individual’s life should be fully controlled by himself or herself, whereas wandering around other’s suggestions and experiences will end up with completely lost. Life Navigator is designed for resonating users of not relaying on inspirational quotes by asking users to capture quotes that fly through in a high speed and promote them to learn from their own life experience.
 
- <p> <a href="https://github.com/chuhan-wu/lifeNavigator"> <strong>[View my code on Github]</strong>
-   </a></p>
+              <p> <a href="https://github.com/chuhan-wu/lifeNavigator"> <strong>[View my code on Github]</strong>
+                </a></p>
               
               </div>
               <div class="clear"></div>
@@ -189,8 +189,12 @@ Many types of media are passionate about producing inspirational programs, which
                                     <img src="demo-images/ln2.jpg" alt=""><br>
                                 </div>
 
+                                <div class="" style="width:50%; margin:0 auto;">
+                                  <img style="width:100%;" src="demo-images/ln-poster.jpg" alt=""><br>
+                                </div>
 
-                              
+
+
                                 <div class="clear"></div>
                                 <p>&nbsp;</p>
                                 <p>&nbsp;</p>
