--- a/ln.html
+++ b/ln.html
@@ -115,7 +115,7 @@
 
               <p> <a href="https://github.com/chuhan-wu/lifeNavigator"> <strong>[View my code on Github]</strong>
                 </a></p>
-              
+
               </div>
               <div class="clear"></div>
 
@@ -141,12 +141,12 @@
                                 <div class="one_half">
                                     <strong>Background: </strong><br>
                                     <p>
-Many types of media are passionate about producing inspirational programs, which also named fortune cookie comments. Program producers intend to motivate public by introducing great amount of successful stories as paragons. However, they indeed send out inspirational nonsense that misleads people. Imposing someone else’s life experience to public is meaningless since each individual has unique circumstance and background, which affect his or her life path and opportunities he or she may meet.                                   </p>
+Many types of media are passionate about producing inspirational programs, which also named fortune cookie comments. Program producers intend to motivate public by introducing great amount of successful stories as paragons. However, they indeed send out inspirational nonsense that misleads people. Imposing someone else’s life experience to public is meaningless since each individual has unique circumstance and background,                            </p>
                                 </div>
 
                                 <div class="one_half last">
                                     <p>&nbsp;</p>
-                                    <p>
+                                    <p> which affect his or her life path and opportunities he or she may meet.
  What’ more, the audience who receive information from inspirational programs will get confused. Blindly chasing the vanity of successful life and following the steps of “elites” may end up with losing the true self and real interests. Thus, I design the system named Life Navigator to imitate the feeling of getting lost among abundant inspirational quotes and comments.
 </p>
                                 </div>
@@ -169,13 +169,13 @@ Many types of media are passionate about producing inspirational programs, which
                                   <strong>Future Expectation:</strong><br>
                                     <p>
 
-                                      Since I consider inspirational programs and comments are unnecessary, I design the Life Navigator to motivate people who indulge in the fictitious success that designed by public media to cherish the difficulties they meet in their life. I believe each individual’s life is unique and unduplicatable, so it is infructuous to blindly following other’s steps and there is no shortcut to the real success. People should overcome difficulties and learn lessons from their failure instead of finding the way to elude barriers in their life from other’s life experiences.
+                                      Since I consider inspirational programs and comments are unnecessary, I design the Life Navigator to motivate people who indulge in the fictitious success that designed by public media to cherish the difficulties they meet in their life. I believe each individual’s life is unique and unduplicatable, so it is infructuous to blindly following other’s steps and there is no shortcut to the real success. People should overcome difficulties and learn lessons
                                     </p>
                                 </div>
 
                                 <div class="one_half last">
                                     <p>&nbsp;</p>
-                                    <p>
+                                    <p>from their failure instead of finding the way to elude barriers in their life from other’s life experiences.
  If possible, I would like to upgrade my system to an actual artificial intelligence with calculation of the answers when absorbing the question from the user. It requires the ability of identifying related information and auto-searching comments from the Internet of the computer.                                   </p>
                                 </div>
                                 <div class="clear"></div>
