--- a/ln.html
+++ b/ln.html
@@ -169,13 +169,13 @@ Many types of media are passionate about producing inspirational programs, which
                                   <strong>Future Expectation:</strong><br>
                                     <p>
 
-                                      Since I consider inspirational programs and comments are unnecessary, I design the Life Navigator to motivate people who indulge in the fictitious success that designed by public media to cherish the difficulties they meet in their life. I believe each individual’s life is unique and unduplicatable, so it is infructuous to blindly following other’s steps and there is no shortcut to the real success. People should overcome difficulties and learn lessons
+                                      Since I consider inspirational programs and comments are unnecessary, I design the Life Navigator to motivate people who indulge in the fictitious success that designed by public media to cherish the difficulties they meet in their life. I believe each individual’s life is unique and unduplicatable, so it is infructuous to blindly following other’s steps and there is no shortcut to the real success. People should overcome difficulties
                                     </p>
                                 </div>
 
                                 <div class="one_half last">
                                     <p>&nbsp;</p>
-                                    <p>from their failure instead of finding the way to elude barriers in their life from other’s life experiences.
+                                    <p>and learn lessons from their failure instead of finding the way to elude barriers in their life from other’s life experiences.
  If possible, I would like to upgrade my system to an actual artificial intelligence with calculation of the answers when absorbing the question from the user. It requires the ability of identifying related information and auto-searching comments from the Internet of the computer.                                   </p>
                                 </div>
                                 <div class="clear"></div>
