--- a/about.html
+++ b/about.html
@@ -1,7 +1,16 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Sun - Html Responsive Template</title>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130570399-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-130570399-1');
+      </script>
+        <title>Chuhan Wu - Interactive Art Portfolio</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by Dry Themes" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -74,10 +83,10 @@
                                 <a href="#">RESUME</a>
                                 <ul class="sub-menu">
                                     <li>
-                                        <a href="images/resume-IxM-final.pdf">Design</a>
+                                        <a href="images/resume-IxM.pdf">Design</a>
                                     </li>
                                     <li>
-                                        <a href="images/resume-Journalism-final.pdf">Media & Journalism</a>
+                                        <a href="images/resume-Journalism.pdf">Media & Journalism</a>
                                     </li>
 
                                 </ul>
@@ -101,18 +110,19 @@
                         <div class="one_half">
                           <b>About Chu-han Wu</b>
                           <br>
-                            I am passionate about visualizing social issues as interactive and digital presentation and never stop exploring new technology and its relationship with human’s life. I intend to contribute to solving the actual social issue and facilitating renovation of people’s virtual experience by using technology and skills. I aspirate to become one of the people who use technology to change the world and leads people to step into the next era of fully utilizing media technologies to discover virtual environment.
+                            I am passionate about visualizing social issues as interactive and digital presentation and never stop exploring new technology and its relationship with human’s life. I intend to contribute to solving the actual social issue and facilitating renovation of people’s virtual experience by using technology and skills. I aspirate to become one of the people who use technology to change the world and leads people to step into the next era of fully utilizing media technologies to discover virtual environment. I double majored in Interdisciplinary
                         </div>
                         <div class="one_half last">
-                            I double majored in Interdisciplinary Computing and The Art Major & Communication in UCSD and completed my undergraduate study in 3 years. ICAM trains me to become a person who may conflate cutting-edge technical skills and unique artistical aesthetic to change human life. Along with my double major of Communication, which provides me the professional theories of information transportation through public media and analytical methods of selecting topics from abundant information in order for me to understand how to arouse public’s resonance efficiency and effectively.
+                            <p>&nbsp;</p>
+                            Computing and The Art Major & Communication in UCSD and completed my undergraduate study in 3 years.
+                            ICAM trains me to become a person who may conflate cutting-edge technical skills and unique artistical aesthetic to change human life. Along with my double major of Communication, which provides me the professional theories of information transportation through public media and analytical methods of selecting topics from abundant information in order for me to understand how to arouse public’s resonance efficiency and effectively.
                         </div>
                         <div class="clear"></div>
-                        <p>&nbsp;</p>
-                        <p>&nbsp;</p>
+
                     </div>
 
-                    <div class="content-1530 center-relative block">
-                        <img src="demo-images/sun_about_image01.jpg" alt="">
+                    <div class="content-1330 center-relative block">
+                        <img style="width:100%" src="demo-images/sun_about_image01.jpg" alt="">
                     </div>
 
                     <!-- <div class="content-1330 center-relative block">
