--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-      
+
         gtag('config', 'UA-130570399-1');
       </script>
       <title>Chuhan Wu - Interactive Art Portfolio</title>
@@ -112,7 +112,7 @@
                       <p>&nbsp;</p>
                       <p>&nbsp;</p>
                       <div class="button-group filters-button-group">
-                          <div class="button is-checked" data-filter="*">All</div>
+                          <div class="button is-checked" data-filter=".fp">All</div>
                           <div class="button" data-filter=".visual">Journalism</div>
                           <div class="button" data-filter=".installation">Interative Media</div>
                           <!-- <div class="button" data-filter=".video"></div> -->
@@ -120,7 +120,7 @@
                       </div>
                       <div class="grid" id="portfolio">
                           <div class="grid-sizer"></div>
-                         <div class="grid-item element-item p_one_third visual installation">
+                         <div class="grid-item element-item p_one_third fp visual installation">
                                 <a href="wycm.html">
                                     <img src="demo-images/sun_portfolio_image04.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -128,7 +128,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="grid-item element-item p_one_third installation">
+                            <div class="grid-item element-item p_one_third fp installation">
                                 <a href="hbd.html">
                                     <img src="demo-images/sun_portfolio_image11.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -137,7 +137,7 @@
                                 </a>
                             </div>
 
-                            <div class="grid-item element-item p_one_third installation">
+                            <div class="grid-item element-item p_one_third fp installation">
                                 <a href="mc.html">
                                     <img src="demo-images/sun_portfolio_image10.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -146,7 +146,7 @@
                                 </a>
                             </div>
 
-                            <div class="grid-item element-item p_one_third visual">
+                            <div class="grid-item element-item p_one_third fp visual">
                                 <a href="ln.html">
                                     <img src="demo-images/sun_portfolio_image07.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -154,7 +154,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="grid-item element-item p_one_third visual">
+                            <div class="grid-item element-item p_one_third fp visual">
                                 <a href="interview.html">
                                     <img src="demo-images/sun_portfolio_image02.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -163,7 +163,7 @@
                                 </a>
                             </div>
 
-                            <div class="grid-item element-item p_one_third installation">
+                            <div class="grid-item element-item p_one_third fp installation">
                                 <a href="tree.html">
                                     <img src="demo-images/sun_portfolio_image03.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -172,7 +172,7 @@
                                 </a>
                             </div>
 
-                            <div class="grid-item element-item p_one_third installation">
+                            <div class="grid-item element-item p_one_third fp installation">
                                 <a href="proudVR.html">
                                     <img src="demo-images/sun_portfolio_image09.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -180,8 +180,8 @@
                                     </div>
                                 </a>
                             </div>
-                            
-                            <div class="grid-item element-item p_one_third visual">
+
+                            <div class="grid-item element-item p_one_third fp visual">
                                 <a href="music.html">
                                     <img src="demo-images/sun_portfolio_image05.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -193,11 +193,20 @@
 
 
 
-                            <div class="grid-item element-item p_one_third music">
+                            <div class="grid-item element-item p_one_third fp music">
                                 <a href="split.html">
                                     <img src="demo-images/sun_portfolio_image08.jpg" alt="">
                                     <div class="portfolio-text-holder">
                                         <p>Split - Double exposure</p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="grid-item element-item p_one_third visual">
+                                <a href="gr.html">
+                                    <img src="demo-images/sun_portfolio_image12.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Gold Rush</p>
                                     </div>
                                 </a>
                             </div>
