--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-      
+
         gtag('config', 'UA-130570399-1');
       </script>
         <title>Chuhan Wu - Interactive Art Portfolio</title>
@@ -121,88 +121,97 @@
                         </div>
                         <div class="grid" id="portfolio">
                             <div class="grid-sizer"></div>
-                            <div class="grid-item element-item p_one_third visual installation">
-                                <a href="wycm.html">
-                                    <img src="demo-images/sun_portfolio_image04.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Will You Call Me?</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="grid-item element-item p_one_third installation">
-                                <a href="hbd.html">
-                                    <img src="demo-images/sun_portfolio_image11.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Human Evalution System</p>
-                                    </div>
-                                </a>
-                            </div>
+                           <div class="grid-item element-item p_one_third fp visual installation">
+                                  <a href="wycm.html">
+                                      <img src="demo-images/sun_portfolio_image04.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Will You Call Me?</p>
+                                      </div>
+                                  </a>
+                              </div>
+                              <div class="grid-item element-item p_one_third fp installation">
+                                  <a href="hbd.html">
+                                      <img src="demo-images/sun_portfolio_image11.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Human Evalution System</p>
+                                      </div>
+                                  </a>
+                              </div>
 
-                            <div class="grid-item element-item p_one_third installation">
-                                <a href="mc.html">
-                                    <img src="demo-images/sun_portfolio_image10.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Magic Cube</p>
-                                    </div>
-                                </a>
-                            </div>
+                              <div class="grid-item element-item p_one_third fp installation">
+                                  <a href="mc.html">
+                                      <img src="demo-images/sun_portfolio_image10.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Magic Cube</p>
+                                      </div>
+                                  </a>
+                              </div>
 
-                            <div class="grid-item element-item p_one_third visual">
-                                <a href="ln.html">
-                                    <img src="demo-images/sun_portfolio_image07.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Life Navigator</p>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="grid-item element-item p_one_third visual">
-                                <a href="interview.html">
-                                    <img src="demo-images/sun_portfolio_image02.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Lilac‘s Studio- Interview</p>
-                                    </div>
-                                </a>
-                            </div>
+                              <div class="grid-item element-item p_one_third fp visual">
+                                  <a href="ln.html">
+                                      <img src="demo-images/sun_portfolio_image07.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Life Navigator</p>
+                                      </div>
+                                  </a>
+                              </div>
+                              <div class="grid-item element-item p_one_third fp visual">
+                                  <a href="interview.html">
+                                      <img src="demo-images/sun_portfolio_image02.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Lilac‘s Studio- Interview</p>
+                                      </div>
+                                  </a>
+                              </div>
 
-                            <div class="grid-item element-item p_one_third installation">
-                                <a href="tree.html">
-                                    <img src="demo-images/sun_portfolio_image03.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Dreaming Tree</p>
-                                    </div>
-                                </a>
-                            </div>
+                              <div class="grid-item element-item p_one_third fp installation">
+                                  <a href="tree.html">
+                                      <img src="demo-images/sun_portfolio_image03.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Dreaming Tree</p>
+                                      </div>
+                                  </a>
+                              </div>
 
-                            <div class="grid-item element-item p_one_third installation">
-                                <a href="proudVR.html">
-                                    <img src="demo-images/sun_portfolio_image09.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Proud VR</p>
-                                    </div>
-                                </a>
-                            </div>
-                            
-                            <div class="grid-item element-item p_one_third visual">
-                                <a href="music.html">
-                                    <img src="demo-images/sun_portfolio_image05.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Music Works</p>
-                                    </div>
-                                </a>
-                            </div>
+                              <div class="grid-item element-item p_one_third fp installation">
+                                  <a href="proudVR.html">
+                                      <img src="demo-images/sun_portfolio_image09.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Proud VR</p>
+                                      </div>
+                                  </a>
+                              </div>
 
-
+                              <div class="grid-item element-item p_one_third fp visual">
+                                  <a href="music.html">
+                                      <img src="demo-images/sun_portfolio_image05.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Music Works</p>
+                                      </div>
+                                  </a>
+                              </div>
 
 
-                            <div class="grid-item element-item p_one_third music">
-                                <a href="split.html">
-                                    <img src="demo-images/sun_portfolio_image08.jpg" alt="">
-                                    <div class="portfolio-text-holder">
-                                        <p>Split - Double exposure</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+
+
+                              <div class="grid-item element-item p_one_third fp music">
+                                  <a href="split.html">
+                                      <img src="demo-images/sun_portfolio_image08.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Split - Double exposure</p>
+                                      </div>
+                                  </a>
+                              </div>
+
+                              <div class="grid-item element-item p_one_third visual">
+                                  <a href="gr.html">
+                                      <img src="demo-images/sun_portfolio_image12.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Gold Rush</p>
+                                      </div>
+                                  </a>
+                              </div>
+  </div>
                         <div class="clear"></div>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
