--- a/index.html
+++ b/index.html
@@ -225,6 +225,15 @@
                                       </div>
                                   </a>
                               </div>
+
+                              <div class="grid-item element-item p_one_third visual installation">
+                                  <a href="gr.html">
+                                      <img src="demo-images/sun_portfolio_image13.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>VR Door</p>
+                                      </div>
+                                  </a>
+                              </div>
   </div>
                         <div class="clear"></div>
                         <p>&nbsp;</p>
