--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                               </div>
 
                               <div class="grid-item element-item p_one_third visual installation">
-                                  <a href="gr.html">
+                                  <a href="vr-door.html">
                                       <img src="demo-images/sun_portfolio_image13.jpg" alt="">
                                       <div class="portfolio-text-holder">
                                           <p>VR Door</p>
