--- a/portfolio.html
+++ b/portfolio.html
@@ -193,7 +193,7 @@
 
 
 
-                            <div class="grid-item element-item p_one_third fp music">
+                            <div class="grid-item element-item p_one_third visual">
                                 <a href="split.html">
                                     <img src="demo-images/sun_portfolio_image08.jpg" alt="">
                                     <div class="portfolio-text-holder">
@@ -211,7 +211,7 @@
                                 </a>
                             </div>
 
-                            <div class="grid-item element-item p_one_third visual installation">
+                            <div class="grid-item element-item p_one_third fp visual installation">
                                 <a href="vr-door.html">
                                     <img src="demo-images/sun_portfolio_image13.jpg" alt="">
                                     <div class="portfolio-text-holder">
