--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                           I'm Chuhan Wu
                         </div>
                         <div class="typeText">
-                            I'm a highly passionate interactive designer and media practicor.
+                            I'm a highly passionate interactive designer and media practitioner.
                             I am graduating after my third year of attending University of California San Diego.
-                            I'm actively applying for a master project to enrich my knowledge and skills.
+                            I'm actively applying for a master program to enrich my knowledge and skills.
                         </div>
 
                         <!-- I am graduating after my third year of attending University of California San Diego and double majored in Interdisciplinary computing and the art major, which trains my abilities of manipulating all these fancy technologies such as VR, Creative coding, interactive design, along with Communication, a major focuses a lot on how to efficiently and effectively spread out ideas.  -->
