--- a/vr-door.html
+++ b/vr-door.html
@@ -107,7 +107,7 @@
 
               <div class="page-desc">
                 <h1><strong>Doors</strong></h1>
-               <h6>Medium: Unity, Oculus</h6>
+               <h6>Medium: Unity, Oculus (Collaboration Project)</h6>
                <div class="three_fourth description" style="float:right;">
                 DOORS is a VR project, which allows the audience to experience the situation of women being gender discriminated by people in society, especially in many professional fields such as film production, technical company, science research, etc. The employment rate of women in such field is significantly lower than males, which causes a false interpretation of women’s abilities in these areas and lead to a fear of women who have the passion of such job at the same time.
 
