--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
               <article>
                   <div class="content-1330 center-relative">
                        <div class="center-relative re-desc" style="">  <!--1201 change float re-desc -->
-                        <strong>  My name is Chuhan Wu, I'm a highly passionate interactive designer and media practicor. I am graduating after my third year of attending University of California San Diego and double majored in Interdisciplinary computing and the art major, which trains my abilities of manipulating all these fancy technologies such as VR, Creative coding, interactive design, along with Communication, a major focuses a lot on how to efficiently and effectively spread out ideas. I'm actively applying for a master project to enrich my knowledge and skills. </strong>  <!--1201 change font -->
+                        <strong>  My name is Chuhan Wu, I'm a highly passionate UIUX designer, sound engineer, producer, and media practicor. I focus on delivering detailed-constructed experience for users through theme entertainment design, multimedia storytelling, and OST and sound effects producation for games and films. I am currently persuing a master degree of Entertainment Technology as a producer and game designer in Carnegie Mellon University, Entertainment Technology Center. </strong>  <!--1201 change font -->
                       </div>
                       <div class="clear"></div>
                       <p>&nbsp;</p>
