--- a/portfolio.html
+++ b/portfolio.html
@@ -113,6 +113,7 @@
                       <p>&nbsp;</p>
                       <div class="button-group filters-button-group">
                           <div class="button is-checked" data-filter=".fp">All</div>
+                          <div class="button is-checked" data-filter=".fp">Games</div>
                           <div class="button" data-filter=".visual">Journalism</div>
                           <div class="button" data-filter=".installation">Interative Media</div>
                           <!-- <div class="button" data-filter=".video"></div> -->
