--- a/portfolio.html
+++ b/portfolio.html
@@ -220,6 +220,15 @@
                                     </div>
                                 </a>
                             </div>
+                          
+                            <div class="grid-item element-item p_one_third fp installation">
+                                <a href="sneaker.html">
+                                    <img src="demo-images/sun_portfolio_image10.jpg" alt="">
+                                    <div class="portfolio-text-holder">
+                                        <p>Sneaker-Magic Leap</p>
+                                    </div>
+                                </a>
+                            </div>
 </div>
                       <div class="clear"></div>
 
