--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                           I'm Chuhan Wu
                         </div>
                         <div class="typeText">
-                            I'm a highly passionate interactive designer and media practitioner.
-                            I am graduating after my third year of attending University of California San Diego.
-                            I'm actively applying for a master program to enrich my knowledge and skills.
+                            My name is Chuhan Wu, I'm a highly passionate UIUX designer, sound engineer, producer, and media practicor. 
+                            I focus on delivering detailed-constructed experience for users through theme entertainment design, multimedia storytelling, and OST and sound effects producation for games and films. 
+                            I am currently persuing a master degree of Entertainment Technology as a producer and game designer in Carnegie Mellon University, Entertainment Technology Center. 
                         </div>
 
                         <!-- I am graduating after my third year of attending University of California San Diego and double majored in Interdisciplinary computing and the art major, which trains my abilities of manipulating all these fancy technologies such as VR, Creative coding, interactive design, along with Communication, a major focuses a lot on how to efficiently and effectively spread out ideas.  -->
@@ -132,6 +132,15 @@
                             <div class="button" data-filter=".installation">Interative Media</div>
                             <!-- <div class="button" data-filter=".video"></div> -->
                             <!-- <div class="button" data-filter=".music">Music</div> -->
+                        </div>
+                             <div class="grid-item element-item p_one_third fp visual installation">
+                                  <a href="sneaker.html">
+                                      <img src="demo-images/sun_portfolio_image14.jpg" alt="">
+                                      <div class="portfolio-text-holder">
+                                          <p>Sneaker-Magic Leap</p>
+                                      </div>
+                                  </a>
+                              </div>
                         </div>
                         <div class="grid" id="portfolio">
                             <div class="grid-sizer"></div>
