--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
                           I'm Chuhan Wu
                         </div>
                         <div class="typeText">
-                            My name is Chuhan Wu, I'm a highly passionate UIUX designer, sound engineer, producer, and media practicor. 
+                            My name is Chuhan Wu, I'm a highly passionate UIUX designer, sound engineer, producer, and media practicor.
+                          </div>
                             I focus on delivering detailed-constructed experience for users through theme entertainment design, multimedia storytelling, and OST and sound effects producation for games and films. 
+                        </div>
                             I am currently persuing a master degree of Entertainment Technology as a producer and game designer in Carnegie Mellon University, Entertainment Technology Center. 
                         </div>
 
